# quantum-analytics

./: .gitignore  .m0-final-user-trigger  .m0-m1-recovery-final-trigger  .m0-r35-user-trigger  .m0-r37-final-trigger  .m0-r38-final-trigger  .m0-r39-final-trigger  .m0-r40-final-trigger  .m0-r41-final-trigger  .m0-user-trigger  .m1-r43-final-trigger  .m1-r44-final-trigger  .m1-r45-final-trigger  .quantum-r2-gate-trigger  README.md  pyproject.toml  quantum_build_backend.py
.github/: CODEOWNERS  EXACT_HEAD_CI_TRIGGER.txt  pull_request_template.md  quantum-russian-repair.patch.gz.b64
.m0-tools/: BASE_REFRESH.txt  TRIGGER.txt  apply_m0_repo_gate.py  finalize_m0_patch.py
.quantum-staging/: TRIGGER  local_pilot.b64.00  local_pilot.b64.01  local_pilot.b64.02  local_pilot.b64.03  local_pilot.b64.04  test_local_pilot.b64.00  test_local_pilot.b64.01
.redteam_patch/: apply.py  part001.txt  part002.txt  part003.txt  part004.txt  part005.txt  part006.txt  part007.txt  part008.txt  part009.txt
config/: home-local.template.json
docs/: BUG_AUDIT.md  CHANGELOG.md  EXISTING_STATE_AUDIT.md  PATCH_PLAN.md  RED_TEAM_AUDIT.md  RELEASE_NOTES.md  RUN_AS_USER_REPORT.md  SMOKE_TEST_REPORT.md  TEST_REPORT.md  UPDATE_WITHOUT_DATA_LOSS.md  USER_INSTALL_GUIDE.md  defender_fallback_r6.md  r6_control.txt  r6_note.txt  redteam_home_local_r6.md
migrations/: 0001_foundation.sql  README.md
requirements/: windows-home-local.txt
schemas/: calculation-profile.schema.json  canonical-event.schema.json  configuration-rule.schema.json  evidence-chain.schema.json  exception-inbox.schema.json  financial-kernel-result.schema.json  import-batch.schema.json  local-pilot-manifest.schema.json  metric-definition.schema.json  metric-result-common.schema.json  metric-result-evidence.schema.json  metric-result.schema.json  report-export-bundle.schema.json  report-record.schema.json  rounding-policy.schema.json  rule-resolution-result.schema.json  safe-expression.schema.json  source-record.schema.json  typed-value.schema.json  ux-configuration-form.schema.json  ux-view.schema.json
scripts/: Install_Quantum_WB_Release.cmd  Install_Quantum_WB_Release.ps1  Quantum_ONE_CLICK_STABLE_RELEASE.cmd  (+11 more)
(+966 files in other folders)
